# cmake-demo

./: CMakeLists.txt
tests/: test_version.cpp
